# company-research-agent

./: README.md
backend/: agent.py  main.py  pyproject.toml  schema.py
frontend/: package-lock.json  types.ts
frontend/pages/: index.tsx
